<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    android:orientation="vertical"
    tools:context=".pages.login.LoginActivity">

    <TextView
        style="@style/xq_text_input"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="www.wanandroid.com"
        android:textColor="@color/colorTextUnclick" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            style="@style/xq_text_bigtext"
            android:layout_marginBottom="40dp"
            android:text="@string/text_login" />

        <EditText
            android:id="@+id/id_logreg_uname"
            style="@style/xq_text_input"
            android:hint="@string/text_input_username" />

        <EditText
            android:id="@+id/id_logreg_password"
            style="@style/xq_text_input"
            android:hint="@string/text_input_password" />

        <Button
            android:id="@+id/id_logreg_btn_sure"
            style="@style/xq_text_button"
            android:layout_marginTop="50dp"
            android:text="@string/text_login" />

        <TextView
            android:id="@+id/id_logreg_click_to_reg"
            style="@style/xq_text_text"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/text_login_reg_account"
            android:textColor="#115583" />
    </LinearLayout>

</RelativeLayout>